--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="icon" href="https://www.conviction-inc/dezamemo.com/assets/img/ico/favicon.ico" />
 <title>デザメモ -つくるをのばす。- 初心者向けWebデザインカリキュラム</title>
-<meta name="description" content="-つくるをのばす。- 初心者向けWebデザインカリキュラム" />
+<meta name="description" content="つくるをのばす。初心者向けWebデザインカリキュラム" />
 <meta name="keywords" content="デザイン,Webデザイン,WEBデザイン,ウェブデザイン,デザインスクール,webdesign,カリキュラム,スキルアップ,プログラミング,キャリアアップ,デザイナー,プログラマー">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
 <meta name="apple-mobile-web-aptitle" content="デザメモ" />
 <meta property="og:title" content="デザメモ" />
-<meta property="og:description" content="-つくるをのばす。- 初心者向けWebデザインカリキュラム 実践的な課題で実務でも通用するスキルを身につけましょう。" />
+<meta property="og:description" content="つくるをのばす。初心者向けWebデザインカリキュラム 実践的な課題で実務でも通用するスキルを身につけましょう。" />
 <meta property="og:url" content="https://www.conviction-inc/dezamemo.com" />
 <meta property="og:image" content="https://www.conviction-inc/dezamemo.com/assets/img/og/ogimage.png" /><!--絶対パスで記述-->
 <meta property="og:type" content="website" />
@@ -23,7 +23,7 @@
 <!-- <meta name="twitter:site" content="" /> --><!--twitterユザネ記述-->
 <meta name="twitter:title" content="デザメモ" />
 <meta name="twitter:url" content="https://www.conviction-inc/dezamemo.com" />
-<meta name="twitter:description" content="-つくるをのばす。- 初心者向けWebデザインカリキュラム 実践的な課題で実務でも通用するスキルを身につけましょう。" />
+<meta name="twitter:description" content="つくるをのばす。初心者向けWebデザインカリキュラム 実践的な課題で実務でも通用するスキルを身につけましょう。" />
 <meta name="twitter:image" content="https://www.conviction-inc/dezamemo.com/assets/mg/og/ogimage.png" /><!--絶対パスで記述-->
 <link rel="stylesheet" href="assets/css/reset.css" />
 <link rel="stylesheet" href="assets/css/style.css" />
