--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="icon" href="https://www.conviction-inc/dezamemo.com/assets/img/ico/favicon.ico" />
-<title>デザメモ -つくるをのばす。- 初心者向けWebデザインカリキュラム</title>
+<title>デザメモ「つくるをのばす。」初心者向けWebデザインカリキュラム</title>
 <meta name="description" content="つくるをのばす。初心者向けWebデザインカリキュラム" />
 <meta name="keywords" content="デザイン,Webデザイン,WEBデザイン,ウェブデザイン,デザインスクール,webdesign,カリキュラム,スキルアップ,プログラミング,キャリアアップ,デザイナー,プログラマー">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -49,6 +49,17 @@
           <img class="p-meritPC__img" src="assets/img/merit-pc.png" alt="3つのメリット">
         </div>
       </div>
+      <div class="p-contentsPC">
+        <div class="p-curriPC">
+          <img class="p-meritPC__img" src="assets/img/curri-pc.png" alt="カリキュラム内容">
+        </div>
+      </div>
+      <div class="p-contentsPC">
+        <h3><img class="p-titlePC" src="assets/img/plan-title.png" alt="プラン"></h3>
+        <div class="p-meritPC">
+          <img class="p-meritPC__img" src="assets/img/plan-pc.png" alt="プラン詳細">
+        </div>
+      </div>
     </div>
     <div class="mb-only">
       <img class="l-visualMB" src="assets/img/main-visual-mb.png" alt="トップビジュアル">
@@ -65,6 +76,45 @@
             <li><img class="p-meritMB__img" src="assets/img/merit-1.png" alt="1つ目のメリット"></li>
             <li><img class="p-meritMB__img" src="assets/img/merit-2.png" alt="2つ目のメリット"></li>
             <li><img class="p-meritMB__img" src="assets/img/merit-3.png" alt="3つ目のメリット"></li>
+          </ul>
+        </div>
+      </div>
+      <div class="p-contentsMB">
+        <div class="p-curriMB">
+          <img class="p-curriMB__img" src="assets/img/curri-mb.png" alt="カリキュラム内容">
+        </div>
+      </div>
+      <div class="p-contentsMB">
+        <h2><img class="p-titleMB" src="assets/img/plan-title.png" alt="プラン"></h2>
+        <div class="p-planMB">
+          <ul>
+            <li class="p-planWrap">
+              <img class="p-planWrap__img" src="assets/img/subsc-plan.png" alt="サブスクプラン">
+              <div class="p-planTop">
+                <img class="p-planMB__topBtn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入">
+              </div>
+              <div class="p-planBtm">
+                <img class="p-planMB__btn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入">
+              </div>
+            </li>
+            <li class="p-planWrap">
+              <img class="p-planWrap__img" src="assets/img/5month-plan.png" alt="サブスクプラン">
+              <div class="p-planTop">
+                <img class="p-planMB__topBtn" src="assets/img/5month-btn.png" alt="サブスクプランを購入">
+              </div>
+              <div class="p-planBtm">
+                <img class="p-planMB__btn" src="assets/img/5month-btn.png" alt="サブスクプランを購入">
+              </div>
+            </li>
+            <li class="p-planWrap">
+              <img class="p-planWrap__img" src="assets/img/10month-plan.png" alt="サブスクプラン">
+              <div class="p-planTop">
+                <img class="p-planMB__topBtn" src="assets/img/10month-btn.png" alt="サブスクプランを購入">
+              </div>
+              <div class="p-planBtm">
+                <img class="p-planMB__btn" src="assets/img/10month-btn.png" alt="サブスクプランを購入">
+              </div>
+            </li>
           </ul>
         </div>
       </div>
