--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <header class="l-header">
     <h1><img class="p-logo" src="assets/img/dezamemo-logo.png" alt="デザメモ"></h1>
     <button class="p-topBtn" type="button">
-      <img class="p-topBtnImg pc-only" src="assets/img/top-btn.png" alt="友だち追加からはじめる">
+      <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-topBtnImg pc-only" src="assets/img/top-btn.png" alt="友だち追加からはじめる"></a>
     </button>
   </header>
   <main>
@@ -55,9 +55,37 @@
         </div>
       </div>
       <div class="p-contentsPC">
-        <h3><img class="p-titlePC" src="assets/img/plan-title.png" alt="プラン"></h3>
-        <div class="p-meritPC">
-          <img class="p-meritPC__img" src="assets/img/plan-pc.png" alt="プラン詳細">
+        <h2><img class="p-otherTitlePC" src="assets/img/plan-title.png" alt="プラン"></h2>
+        <div class="p-planPC">
+          <ul>
+            <li class="p-planWrapPC">
+              <img class="p-planPCImg" src="assets/img/subsc-plan.png" alt="サブスクプラン">
+              <div class="p-planTopPC">
+                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planTopPC__topBtn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入"></a>
+              </div>
+              <div class="p-planBtmPC">
+                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planBtmPC__btn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入"></a>
+              </div>
+            </li>
+            <li class="p-planWrapPC">
+              <img class="p-planPCImg" src="assets/img/5month-plan.png" alt="サブスクプラン">
+              <div class="p-planTopPC">
+                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planTopPC__topBtn" src="assets/img/5month-btn.png" alt="5ヶ月プランを購入"></a>
+              </div>
+              <div class="p-planBtmPC">
+                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planBtmPC__btn" src="assets/img/5month-btn.png" alt="5ヶ月プランを購入"></a>
+              </div>
+            </li>
+            <li class="p-planWrapPC">
+              <img class="p-planPCImg" src="assets/img/10month-plan.png" alt="サブスクプラン">
+              <div class="p-planTopPC">
+                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planTopPC__topBtn" src="assets/img/10month-btn.png" alt="10ヶ月プランを購入"></a>
+              </div>
+              <div class="p-planBtmPC">
+                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planBtmPC__btn" src="assets/img/10month-btn.png" alt="10ヶ月プランを購入"></a>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
@@ -66,7 +94,7 @@
       <div class="l-topContents">
         <img class="p-copyMB" src="assets/img/copy-mb.png" alt="マンツーマンで基礎の基礎から徹底指導！カリキュラム＋コーチング型デザイン学習プログラム">
         <button class="p-topBtnMB" type="button">
-          <img class="p-topBtnMB__img" src="assets/img/top-btn.png" alt="友だち追加からはじめる">
+          <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-topBtnMB__img" src="assets/img/top-btn.png" alt="友だち追加からはじめる"></a>
         </button>
       </div>
       <div class="p-contentsMB">
@@ -85,34 +113,34 @@
         </div>
       </div>
       <div class="p-contentsMB">
-        <h2><img class="p-titleMB" src="assets/img/plan-title.png" alt="プラン"></h2>
+        <h2><img class="p-planTitleMB" src="assets/img/plan-title.png" alt="プラン"></h2>
         <div class="p-planMB">
           <ul>
             <li class="p-planWrap">
               <img class="p-planWrap__img" src="assets/img/subsc-plan.png" alt="サブスクプラン">
               <div class="p-planTop">
-                <img class="p-planMB__topBtn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入">
+                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planMB__topBtn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入"></a>
               </div>
               <div class="p-planBtm">
-                <img class="p-planMB__btn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入">
+                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planMB__btn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入"></a>
               </div>
             </li>
             <li class="p-planWrap">
               <img class="p-planWrap__img" src="assets/img/5month-plan.png" alt="サブスクプラン">
               <div class="p-planTop">
-                <img class="p-planMB__topBtn" src="assets/img/5month-btn.png" alt="サブスクプランを購入">
+                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planMB__topBtn" src="assets/img/5month-btn.png" alt="5ヶ月プランを購入"></a>
               </div>
               <div class="p-planBtm">
-                <img class="p-planMB__btn" src="assets/img/5month-btn.png" alt="サブスクプランを購入">
+                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planMB__btn" src="assets/img/5month-btn.png" alt="5ヶ月プランを購入"></a>
               </div>
             </li>
             <li class="p-planWrap">
               <img class="p-planWrap__img" src="assets/img/10month-plan.png" alt="サブスクプラン">
               <div class="p-planTop">
-                <img class="p-planMB__topBtn" src="assets/img/10month-btn.png" alt="サブスクプランを購入">
+                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planMB__topBtn" src="assets/img/10month-btn.png" alt="10ヶ月プランを購入"></a>
               </div>
               <div class="p-planBtm">
-                <img class="p-planMB__btn" src="assets/img/10month-btn.png" alt="サブスクプランを購入">
+                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planMB__btn" src="assets/img/10month-btn.png" alt="10ヶ月プランを購入"></a>
               </div>
             </li>
           </ul>
