--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
       <div class="p-contentsPC">
         <div class="p-curriPC">
-          <img class="p-meritPC__img" src="assets/img/curri-pc.png" alt="カリキュラム内容">
+          <img class="p-curriPC__img" src="assets/img/curri-pc.png" alt="カリキュラム内容">
         </div>
       </div>
       <div class="p-contentsPC">
