--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             </li>
           </ul>
         </div>
+        <div class="p-planTextPC"><img class="p-planTextPC__text" src="assets/img/plan-text-pc.png" alt="プラン"></div>
       </div>
     </div>
     <div class="mb-only">
@@ -145,6 +146,7 @@
             </li>
           </ul>
         </div>
+        <div class="p-planTextMB"><img class="p-planTextMB__text" src="assets/img/plan-text-mb.png" alt="プラン"></div>
       </div>
     </div>
   </main>
