--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
         </div>
         <div class="p-planTextPC"><img class="p-planTextPC__text" src="assets/img/plan-text-pc.png" alt="プラン"></div>
       </div>
+      <div class="p-contentsPC">
+        <h2><img class="p-titlePC" src="assets/img/example-title.png" alt="制作例"></h2>
+        <div class="p-meritPC">
+          <img class="p-meritPC__img" src="assets/img/example-pc.png" alt="制作例詳細">
+        </div>
+      </div>
     </div>
     <div class="mb-only">
       <img class="l-visualMB" src="assets/img/main-visual-mb.png" alt="トップビジュアル">
@@ -147,6 +153,12 @@
           </ul>
         </div>
         <div class="p-planTextMB"><img class="p-planTextMB__text" src="assets/img/plan-text-mb.png" alt="プラン"></div>
+      </div>
+      <div class="p-contentsMB">
+        <h2><img class="p-titleMB" src="assets/img/example-title.png" alt="制作例"></h2>
+        <div class="p-meritMB">
+          <img class="p-meritPC__img" src="assets/img/example-mb.png" alt="制作例詳細">
+        </div>
       </div>
     </div>
   </main>
