--- a/index.html
+++ b/index.html
@@ -87,12 +87,20 @@
             </li>
           </ul>
         </div>
-        <div class="p-planTextPC"><img class="p-planTextPC__text" src="assets/img/plan-text-pc.png" alt="プラン"></div>
+        <div class="p-planTextPC">
+          <img class="p-planTextPC__text" src="assets/img/plan-text-pc.png" alt="大きな手直しも無く、スピード感を持って取り組まれている方で、それぞれ3ヶ月程度が目安期間です。">
+        </div>
       </div>
       <div class="p-contentsPC">
-        <h2><img class="p-titlePC" src="assets/img/example-title.png" alt="制作例"></h2>
-        <div class="p-meritPC">
-          <img class="p-meritPC__img" src="assets/img/example-pc.png" alt="制作例詳細">
+        <h2><img class="p-exampleTitlePC" src="assets/img/example-title.png" alt="制作例"></h2>
+        <div class="p-exampleTextPC">
+          <img class="p-exampleTextPC__text" src="assets/img/example-textTop-pc.png" alt="添削による、バナーデザインのブラッシュアップ例を少しだけ公開！ちょっとした工夫で、デザインは一気に変わるものです。">
+        </div>
+        <div class="p-examplePC">
+          <img class="p-examplePC__img" src="assets/img/example-pc.png" alt="制作例詳細">
+        </div>
+        <div class="p-exampleTextPCBtm">
+          <img class="p-exampleTextPCBtm__text" src="assets/img/example-textBtm-pc.png" alt="※元のデザインを尊重してフィードバックをしますので、独創性も活かせます！">
         </div>
       </div>
     </div>
@@ -133,7 +141,7 @@
               </div>
             </li>
             <li class="p-planWrap">
-              <img class="p-planWrap__img" src="assets/img/5month-plan.png" alt="サブスクプラン">
+              <img class="p-planWrap__img" src="assets/img/5month-plan.png" alt="5ヶ月プラン">
               <div class="p-planTop">
                 <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planMB__topBtn" src="assets/img/5month-btn.png" alt="5ヶ月プランを購入"></a>
               </div>
@@ -142,7 +150,7 @@
               </div>
             </li>
             <li class="p-planWrap">
-              <img class="p-planWrap__img" src="assets/img/10month-plan.png" alt="サブスクプラン">
+              <img class="p-planWrap__img" src="assets/img/10month-plan.png" alt="10ヶ月プラン">
               <div class="p-planTop">
                 <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planMB__topBtn" src="assets/img/10month-btn.png" alt="10ヶ月プランを購入"></a>
               </div>
@@ -155,9 +163,15 @@
         <div class="p-planTextMB"><img class="p-planTextMB__text" src="assets/img/plan-text-mb.png" alt="プラン"></div>
       </div>
       <div class="p-contentsMB">
-        <h2><img class="p-titleMB" src="assets/img/example-title.png" alt="制作例"></h2>
-        <div class="p-meritMB">
+        <h2><img class="p-planTitleMB" src="assets/img/example-title.png" alt="制作例"></h2>
+        <div class="p-exampleTextMB">
+          <img class="p-exampleTextMB__text" src="assets/img/example-textTop-mb.png" alt="添削による、バナーデザインのブラッシュアップ例を少しだけ公開！ちょっとした工夫で、デザインは一気に変わるものです。">
+        </div>
+        <div class="p-exampleMB">
           <img class="p-meritPC__img" src="assets/img/example-mb.png" alt="制作例詳細">
+        </div>
+        <div class="p-exampleTextMBBtm">
+          <img class="p-exampleTextMBBtm__text" src="assets/img/example-textBtm-mb.png" alt="※元のデザインを尊重してフィードバックをしますので、独創性も活かせます！">
         </div>
       </div>
     </div>
