--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
           <img class="p-exampleTextPCBtm__text" src="assets/img/example-textBtm-pc.png" alt="※元のデザインを尊重してフィードバックをしますので、独創性も活かせます！">
         </div>
       </div>
+      <div class="p-contentsPC">
+        <h2><img class="p-exampleTitlePC" src="assets/img/voice-title.png" alt="受講者の声"></h2>
+        <div class="p-examplePC">
+          <img class="p-examplePC__img" src="assets/img/voice-pc.png" alt="受講者の声詳細">
+        </div>
+      </div>
     </div>
     <div class="mb-only">
       <img class="l-visualMB" src="assets/img/main-visual-mb.png" alt="トップビジュアル">
@@ -172,6 +178,12 @@
         </div>
         <div class="p-exampleTextMBBtm">
           <img class="p-exampleTextMBBtm__text" src="assets/img/example-textBtm-mb.png" alt="※元のデザインを尊重してフィードバックをしますので、独創性も活かせます！">
+        </div>
+      </div>
+      <div class="p-contentsMB">
+        <h2><img class="p-planTitleMB" src="assets/img/voice-title.png" alt="受講者の声"></h2>
+        <div class="p-exampleMB">
+          <img class="p-meritPC__img" src="assets/img/voice-mb.png" alt="受講者の声詳細">
         </div>
       </div>
     </div>
