--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               </div>
             </li>
             <li class="p-planWrapPC">
-              <img class="p-planPCImg" src="assets/img/5month-plan.png" alt="サブスクプラン">
+              <img class="p-planPCImg" src="assets/img/5month-plan.png" alt="5ヶ月プラン">
               <div class="p-planTopPC">
                 <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planTopPC__topBtn" src="assets/img/5month-btn.png" alt="5ヶ月プランを購入"></a>
               </div>
@@ -77,7 +77,7 @@
               </div>
             </li>
             <li class="p-planWrapPC">
-              <img class="p-planPCImg" src="assets/img/10month-plan.png" alt="サブスクプラン">
+              <img class="p-planPCImg" src="assets/img/10month-plan.png" alt="10ヶ月プラン">
               <div class="p-planTopPC">
                 <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planTopPC__topBtn" src="assets/img/10month-btn.png" alt="10ヶ月プランを購入"></a>
               </div>
@@ -253,6 +253,74 @@
         <div class="p-voiceMB">
           <img class="p-meritPC__img" src="assets/img/voice-mb.png" alt="受講者の声詳細">
         </div>
+      </div>
+      <div class="p-contentsMB">
+        <h2><img class="p-questionTitleMB" src="assets/img/question-title.png" alt="よくある質問"></h2>
+        <div class="p-questionPC">
+          <ul>
+            <li class="p-questionWrapPC">
+              <div class="p-question">
+                <img class="p-questionBox" src="assets/img/Q.png" alt="Q1">
+                <img class="p-question__text" src="assets/img/Q1-mb.png" alt="必要なPCはMacですか？Windowsですか？">
+                <img class="p-question__plus" src="assets/img/plus.png" alt="回答を開く">
+              </div>
+              <div class="p-answer">
+                <img class="p-questionBoxA" src="assets/img/A.png" alt="A1">
+                <div>
+                  <img class="p-questionBorder" src="assets/img/border.png" alt="点線">
+                  <img class="p-question__textA1" src="assets/img/A1-mb.png" alt="どちらでも大丈夫ですが、推奨はMacです。WindowsだとAdobeツールを使った際、動きが重くなるというご報告をいくつかいただいています。">
+                </div>
+              </div>
+            </li>
+            <li class="p-questionWrapPC">
+              <div class="p-question">
+                <img class="p-questionBox" src="assets/img/Q.png" alt="Q2">
+                <img class="p-question__text" src="assets/img/Q2-mb.png" alt="最低継続期間など、期間の制約はありますか？">
+                <img class="p-question__plus" src="assets/img/plus.png" alt="回答を開く">
+              </div>
+              <div class="p-answer">
+                <img class="p-questionBoxA" src="assets/img/A.png" alt="A2">
+                <div>
+                  <img class="p-questionBorder" src="assets/img/border.png" alt="点線">
+                  <img class="p-question__textA2" src="assets/img/A2-mb.png" alt="いずれのプランも途中解約は不可とさせていただいております。(サブスクプラン以外は早期修了でキャッシュバックあり/いずれのプランも8日以内での解約希望はクーリングオフ適用で全額返金)">
+                </div>
+              </div>
+            </li>
+            <li class="p-questionWrapPC">
+              <div class="p-question">
+                <img class="p-questionBox" src="assets/img/Q.png" alt="Q3">
+                <img class="p-question__text" src="assets/img/Q3-mb.png" alt="講師に質問したらどれくらいで返答がきますか？">
+                <img class="p-question__plus" src="assets/img/plus.png" alt="回答を開く">
+              </div>
+              <div class="p-answer">
+                <img class="p-questionBoxA" src="assets/img/A.png" alt="A3">
+                <div>
+                  <img class="p-questionBorder" src="assets/img/border.png" alt="点線">
+                  <img class="p-question__text3" src="assets/img/A3-mb.png" alt="質問から24時間以内に何かしらの返答をお送りしております。質問は1日(24時間)のうちいつでも可能です。ただしながら現役エンジニア/デザイナーが講師を務めておりますので、業務都合により返答状況に変動がございますことをご承知おきいただければと思います。">
+                </div>
+              </div>
+            </li>
+            <li class="p-questionWrapPC">
+              <div class="p-question">
+                <img class="p-questionBox" src="assets/img/Q.png" alt="Q4">
+                <img class="p-question__text" src="assets/img/Q4-mb.png" alt="キャッシュバックを受けられる修了期日はいつですか？">
+                <img class="p-question__plus" src="assets/img/plus.png" alt="回答を開く">
+              </div>
+              <div class="p-answer">
+                <img class="p-questionBoxA" src="assets/img/A.png" alt="A4">
+                <div>
+                  <img class="p-questionBorder" src="assets/img/border.png" alt="点線">
+                  <img class="p-question__text4" src="assets/img/A4-mb.png" alt="(サブスクプラン以外)1ヶ月ごとに修了状況を確認いたします。翌月へと日付が切り替わった瞬間から、1ヶ月分キャッシュバックが減ります。例：5ヶ月プラン/ 3月18日入会→4月17日 23:59までにカリキュラム修了(フィードバック含む)していれば、4ヶ月分のキャッシュバックとなります。(4月18日 0:00から3ヶ月分に切替)※1ヶ月は、月の途中からであっても当月が30日間であれば30日、31日間ある月であれば31日、というようにカウントします。">
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="p-contentsMB">
+        <button class="p-btmBtn" type="button">
+          <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-btmBtnImg" src="assets/img/btm-btn.png" alt="友だち追加でお問い合わせ"></a>
+        </button>
       </div>
     </div>
   </main>
