--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
               <div class="p-question">
                 <img class="p-questionBox" src="assets/img/Q.png" alt="Q1">
                 <img class="p-question__text" src="assets/img/Q1-pc.png" alt="必要なPCはMacですか？Windowsですか？">
-                <button class="p-question__plus" id="button"></button>
+                <button class="p-question__plus" id="button1"></button>
               </div>
-              <div class="p-answer hidden" id="list">
+              <div class="p-answer hidden" id="list1">
                 <img class="p-questionBoxA" src="assets/img/A.png" alt="A1">
                 <div>
                   <img class="p-questionBorder" src="assets/img/border.png" alt="点線">
@@ -131,9 +131,9 @@
               <div class="p-question">
                 <img class="p-questionBox" src="assets/img/Q.png" alt="Q2">
                 <img class="p-question__text" src="assets/img/Q2-pc.png" alt="最低継続期間など、期間の制約はありますか？">
-                <button class="p-question__plus" id="button"></button>
+                <button class="p-question__plus" id="button2"></button>
               </div>
-              <div class="p-answer hidden" id="list">
+              <div class="p-answer hidden" id="list2">
                 <img class="p-questionBoxA" src="assets/img/A.png" alt="A2">
                 <div>
                   <img class="p-questionBorder" src="assets/img/border.png" alt="点線">
@@ -145,9 +145,9 @@
               <div class="p-question">
                 <img class="p-questionBox" src="assets/img/Q.png" alt="Q3">
                 <img class="p-question__text" src="assets/img/Q3-pc.png" alt="講師に質問したらどれくらいで返答がきますか？">
-                <button class="p-question__plus" id="button"></button>
+                <button class="p-question__plus" id="button3"></button>
               </div>
-              <div class="p-answer hidden" id="list">
+              <div class="p-answer hidden" id="list3">
                 <img class="p-questionBoxA" src="assets/img/A.png" alt="A3">
                 <div>
                   <img class="p-questionBorder" src="assets/img/border.png" alt="点線">
@@ -159,9 +159,9 @@
               <div class="p-question">
                 <img class="p-questionBox" src="assets/img/Q.png" alt="Q4">
                 <img class="p-question__text" src="assets/img/Q4-pc.png" alt="キャッシュバックを受けられる修了期日はいつですか？">
-                <button class="p-question__plus" id="button"></button>
+                <button class="p-question__plus" id="button4"></button>
               </div>
-              <div class="p-answer hidden" id="list">
+              <div class="p-answer hidden" id="list4">
                 <img class="p-questionBoxA" src="assets/img/A.png" alt="A4">
                 <div>
                   <img class="p-questionBorder" src="assets/img/border.png" alt="点線">
@@ -262,9 +262,9 @@
               <div class="p-question">
                 <img class="p-questionBox" src="assets/img/Q.png" alt="Q1">
                 <img class="p-question__text" src="assets/img/Q1-mb.png" alt="必要なPCはMacですか？Windowsですか？">
-                <button class="p-question__plus" id="button"></button>
+                <button class="p-question__plus" id="button5"></button>
               </div>
-              <div class="p-answer hidden" id="list">
+              <div class="p-answer hidden" id="list5">
                 <img class="p-questionBoxA" src="assets/img/A.png" alt="A1">
                 <div>
                   <img class="p-questionBorder" src="assets/img/border.png" alt="点線">
@@ -276,9 +276,9 @@
               <div class="p-question">
                 <img class="p-questionBox" src="assets/img/Q.png" alt="Q2">
                 <img class="p-question__text" src="assets/img/Q2-mb.png" alt="最低継続期間など、期間の制約はありますか？">
-                <button class="p-question__plus" id="button"></button>
+                <button class="p-question__plus" id="button6"></button>
               </div>
-              <div class="p-answer hidden" id="list">
+              <div class="p-answer hidden" id="list6">
                 <img class="p-questionBoxA" src="assets/img/A.png" alt="A2">
                 <div>
                   <img class="p-questionBorder" src="assets/img/border.png" alt="点線">
@@ -290,9 +290,9 @@
               <div class="p-question">
                 <img class="p-questionBox" src="assets/img/Q.png" alt="Q3">
                 <img class="p-question__text" src="assets/img/Q3-mb.png" alt="講師に質問したらどれくらいで返答がきますか？">
-                <button class="p-question__plus" id="button"></button>
+                <button class="p-question__plus" id="button7"></button>
               </div>
-              <div class="p-answer hidden" id="list">
+              <div class="p-answer hidden" id="list7">
                 <img class="p-questionBoxA" src="assets/img/A.png" alt="A3">
                 <div>
                   <img class="p-questionBorder" src="assets/img/border.png" alt="点線">
@@ -304,9 +304,9 @@
               <div class="p-question">
                 <img class="p-questionBox" src="assets/img/Q.png" alt="Q4">
                 <img class="p-question__text" src="assets/img/Q4-mb.png" alt="キャッシュバックを受けられる修了期日はいつですか？">
-                <button class="p-question__plus" id="button"></button>
+                <button class="p-question__plus" id="button8"></button>
               </div>
-              <div class="p-answer hidden" id="list">
+              <div class="p-answer hidden" id="list8">
                 <img class="p-questionBoxA" src="assets/img/A.png" alt="A4">
                 <div>
                   <img class="p-questionBorder" src="assets/img/border.png" alt="点線">
